update build.sbt options and don't import /etc/gu/security-hq.conf